Fix layout for web demo; hide settings in desktop app when no room
- Fixes https://github.com/1j01/tracky-mouse/issues/52
  Broken in https://github.com/1j01/tracky-mouse/commit/e46a2cc72c8bf6eef8c803d22f46d2e1c7e85c5b
  The camera view was collapsed because it had no intrinsic height,
  in the web library version, whereas in the desktop app, it was fine
  because it included `height: 100%` for the .tracky-mouse-ui overall.
  Add min-height of 300px for the web version to solve this.
- For the desktop app, hide the settings when the window height is small
  and make the camera view fill the window.

--- a/tracky-mouse.css
+++ b/tracky-mouse.css
@@ -91,12 +91,18 @@
 	flex: 1;
 	flex-basis: 0;
 	min-width: 0;
-	min-height: 0;
+	/* I might be able to simplify this or let it have an intrinsic height
+	based on the width, for the web demo, by leaving min-height unset (auto),
+	and only setting it	to 0 for the desktop app.
+	Well, really the difference is whether the height of the .tracky-mouse-ui
+	is fixed or not, not whether it's a web demo or desktop app.
+	So I might differentiate based on a .constrained-height class or something,
+	if not detect it automatically. */
+	min-height: var(--tracky-mouse-camera-view-min-height, 300px);
 }
 .tracky-mouse-canvas-container {
 	position: relative;
 	/* Note: aspect-ratio is set from JS, which determines the width implicitly. */
-	/* TODO: add min size, or better maybe, handle small window by hiding options and making webcam view big. */
 	max-height: 100%;
 	margin: auto;
 }
